# jobfleet

./: .clang-format  .gitignore  CMakeLists.txt
docs/: ARCHITECTURE.md  README.md  RELATORIO_FINAL.md
docs/diagrams/: architecture.puml  client_server_sequence.puml
scripts/: stress_log.sh  test_chat.sh
src/libtslog/: tslog.cpp  tslog.h
src/net/: chat_client.cpp  chat_server.cpp
tools/: logtest.cpp
